@@ -1,6 +1,6 @@
 AUX bug_x86_64.patch 2428 BLAKE2B 2a6b8f6b9cba9694a5ff1909f5454ab6c3a3e19ef7706aa3f245991c2945b1ffe2f2a792fa85d14e2dd8cd5181eca9eed1b171c891f14c84d04b88cdfb8c097f SHA512 55cafa67de12daa9730e2aca3887b049dd52dd093e9f1609ea656165a67cd30bc1fc2b043c675f778a52e9e3fddce751f1b3533e31b7e6fbbbeede1cc25726ac
-DIST epson-inkjet-printer-escpr2-1.1.35.tar.gz 4138135 BLAKE2B f3bd8df830652ed94f6e9da567bd12407ee68ba7b5e629fbccc09f5dd592ce05ec3f5a7718cc76adb718aed2f2a58fb500b509967e44377d1d9d23c2994de3bf SHA512 69d95f235288f2079e59e217e2ab61ed407b6d67fdd1f9ba2bff5bc951afe0d41558d2d245ee642d4560e6dd0047f11afb503b32209e9cda4f7dc330f4f03cc4
 DIST epson-inkjet-printer-escpr2-1.1.36.tar.gz 4180392 BLAKE2B 76d3891aa462bcfeadeedc7301758e545cf23f3ed563503746e3d2b6aba6385e6c4d45b5c69ac3957fff47a3a27b13097fef398258b76886e3f0b3281b4f6269 SHA512 0c826bea56840f269cc14473dedfd2c122cbddd06f67e2d4d07e748c8bb52cb6b3269dcf0a3bf99cbf2646c6a561b82804b440db85eeadf658c0edbecec36424
-EBUILD epson-inkjet-printer-escpr2-1.1.35.ebuild 1319 BLAKE2B 1c83ce098607162445e8cf136e3078421cfefc133b51b65e39825ea869fe4a9e8ed1bfbd8e59b51f68b736e18103225197c1149ed6a50adf0a164c3d460f8ccd SHA512 1f2801feb0568ebb4164a48325796ab818b15ed8e474e469e3b251bc187fd766c17a77bafd912c96791f8331b67d3454ecefb17fb552b697b899975d981af492
+DIST epson-inkjet-printer-escpr2-1.1.37.tar.gz 4239243 BLAKE2B 5972e1cf456938336503a11c2177c6ac9cf334023681159724415073728ffb2d95cdea55659712f06a75d7741ee1fc65b28628a3b01988e6c5cc3829fc4b3e4b SHA512 3e1a1a64a388413d77b942e83891f86fa721c8c2229a4df9b87e6238f8b5363128447145deb4ab7273b8a4962f1677c480c36ff27d60943a5d7b4014f40ad6e3
 EBUILD epson-inkjet-printer-escpr2-1.1.36.ebuild 1319 BLAKE2B fdafb061ce08dd769e6af907e8491c92ec1ddc620b8d2fb0174f785c61716c498d64d64197d486772826d0d0c476f954154574182aace2a25cc2d2738c7c0a1f SHA512 00bcbc2d05d847da91f75b2a59cc8edbd42f4e6c1fb63629fbfa9e8cb933b58e7708682cf61b0e64389b8bb6d5ceb44ac9df6c89c0d7fbb0aa81abee006e03a0
+EBUILD epson-inkjet-printer-escpr2-1.1.37.ebuild 1319 BLAKE2B cce10e345ab474c45c26c1810920d14195b6fff096b018736a2c1c2ed144fb2eaa930d3a4159836f0f5e7781ba28a33bada06c5e86d1b02c9967cdec9a72c0e0 SHA512 570204e091b90a5cda19c75dbb99d115796671dbf7d94bc04d53e7d027e4ab05898fb24c3d23ba1d597791de2d45f66660d2cbfe2c36f1b5828588a5c468bbd2
 MISC metadata.xml 767 BLAKE2B f926930802184524574c0cc524e8a4e519c343041491770cd1ec74c356d2657c3c566948081a816c9e4d2924b4ad5162023336de0b1fe1ed7199106ed1f5dc86 SHA512 5e1183fe70cdf9cd2dac426a594750ee9733e4cbe9caac68ed028539589653bb6c10083397d234c53dbd1875520be1b2edc4078a117891b040975acd7fa840ac
